[package]
name = "tcping"
version = "0.9.9"
authors = ["Kirill Shlenskiy"]
edition = "2018"
build = "src/build.rs"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
clap = "4.5.41"
console = "0.16.0"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "time"] }

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.12"

[profile.release]
lto = true
panic = 'abort'

[package.metadata.winres]
FileDescription = "TCP ping utility"
LegalCopyright = "Copyright (C) 2024 Kirill Shlenskiy"
ProductVersion = "0.9.9"
