[package]
name = "tcping"
version = "0.9.10"
authors = ["Kirill Shlenskiy"]
edition = "2021"
build = "src/build.rs"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = "4.5.53"
console = "0.16.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.12"

[profile.release]
lto = true
panic = 'abort'

[package.metadata.winres]
FileDescription = "TCP ping utility"
LegalCopyright = "Copyright (C) 2025 Kirill Shlenskiy"
ProductVersion = "0.9.10"
