[package]
name = "tcping"
version = "0.9.10"
authors = ["Kirill Shlenskiy"]
edition = "2024"
build = "src/build.rs"

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clap = "4.6.1"
console = "0.16.3"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time", "net", "signal"] }

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.12"

[profile.release]
lto = true
panic = 'abort'

[package.metadata.winres]
FileDescription = "TCP ping utility"
LegalCopyright = "Copyright (C) 2025 Kirill Shlenskiy"
ProductVersion = "0.9.10"
